# loco

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: loco-experiment-runner.md
docs/: baselines.md  m14-candidates.md  m15-candidates.md  m16-candidates.md  m7-candidates.md  m9-candidates.md
docs/experiments/: PROTOCOL.md  TEMPLATE.md
docs/research/: 2026-07-16-aider-repo-map.md  2026-07-16-codex-rs.md  2026-07-16-grok-build.md  2026-07-17-m10-sr-loop-forensics.md  2026-07-17-m8-failure-analysis.md  2026-07-18-m11-uv-progress-forensics.md  2026-07-18-uv-residual-failure-analysis.md
scripts/: exp_metrics.py  leak_audit.py  link_issues.py  pilot.sh  pilot_tally.py  procure_real.sh  serve.sh
src/: config.rs  lib.rs  main.rs  session.rs  test_summary.rs
src/agent/: approval.rs  bounded.rs  finish_nudge.rs  mod.rs  prompt.rs  protocol.rs  repetition.rs  status_note.rs
src/eval/: integrity.rs  mod.rs  procure.rs  report.rs  sandbox.rs  task.rs  verify.rs
src/llm/: client.rs  mod.rs  sse.rs  types.rs
src/notes/: mod.rs  path.rs  schema.rs  state.rs  templates.rs
src/tools/: diff.rs  edit_file.rs  eol.rs  exec.rs  grep.rs  list_files.rs  mod.rs  path.rs  (+4 more)
tasks/: .gitattributes
tasks-large/: README.md
tasks-large/find-definition-large/fixture/inv-cli/: Cargo.toml
tasks-large/find-definition-large/fixture/inv-cli/src/: lib.rs  main.rs  util.rs
tasks-large/find-definition-large/fixture/inv-cli/src/commands/: ingest.rs  inventory.rs  mod.rs
tasks-large/find-definition-large/fixture/inv-cli/tests/: cli_basic.rs
(+366 files in other folders)
