[package]
name = "loco"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
rustyline = "18.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
